# experience

./: .gitignore
boost-python-examples-master/: CMakeLists.txt
boost-python-examples-master/14-MyEmbedding/: CMakeLists.txt  embedding.cpp  embedding.py  mymodule.cpp  mymodule.hpp
boost-python-examples-master/15-CallPython/: CMakeLists.txt  callpython.cpp  pyprog.py
boost_strand/: CMakeLists.txt  booststrand.cpp
bpcond/project/: CMakeLists.txt
bpcond/project/executable/: CMakeLists.txt  bpcond.cpp
cmake/test/: CMakeLists.txt
cmake/test/src/: CMakeLists.txt  common.hpp  core.cpp  core.hpp  source.cpp  types.hpp
common/: CMakeLists.txt  buffer.hpp  commontypes.hpp  daemon.hpp  help.hpp  hexbuf.hpp  logger.hpp  scheduler.hpp  thread_pool.hpp  thread_tools.hpp  time_measurement.hpp  timeformat.hpp  tools.hpp  wait.h
common/src/: CMakeLists.txt  buffer.cpp  daemon.cpp  hexbuf.cpp  logger.cpp  scheduler.cpp  thread_pool.cpp  thread_tools.cpp  time_measurement.cpp  timeformat.cpp  wait.cpp
fixed/project/executable/: CMakeLists.txt  project.cpp
fixgroup/fixgroup/fixgroup/: CMakeLists.txt  fixgroup.cpp
fixmsg/fixmsg/: CMakeLists.txt
fixmsg/fixmsg/fixmsg/: CMakeLists.txt  createtable.cpp  fields.cpp  fixfactory.cpp  fixfactory.h  fixmsg.cpp  msgcreator.cpp  msgcreator.h  table.cpp
itertest/: CMakeLists.txt  itertest.cpp
kbuild/: Makefile.am  README  configure.ac
kbuild/cProgram/: Makefile.am  main.c
kbuild/sourceModule/: Kbuild  Makefile  linuxKernelModule.c
ncds/: .gitignore  CMakeLists.txt  config.json  nasdq.type  rdkafka_conf.txt  readme  schema.old.tar.bz2  schema.tar.bz2  schematic.sha1  test
ncds/avrotest/: CMakeLists.txt  avrotest.cpp
ncds/cmake/Modules/: FindJSON-C.cmake  FindSPDLOG.cmake
ncds/consumer/: env_configs.cpp
ncds/consumer11/: CMakeLists.txt  configs.h  consumer.cpp  env_configs.h
ncds/example/: CMakeLists.txt  configs.cpp  consumer_env.cpp  env_configs.cpp  env_configs.h  print_records.cpp  print_records.h
ncds/icertificates/: InstallCertificates.cpp
ncds/include/: AvroDeserializer.h  NCDSClient.h  config.h  consumer.h  print_records.h  printbuf.h  readconfig.h  types.h
ncds/include/consumer/: NasdaqKafkaAvroConsumer.h
ncds/include/internal/: Logging.h  ReadSchemaTopic.h
ncds/kafka/: CMakeLists.txt  config.cpp  consumer.cpp  event.h  oauthbearer.cpp  oauthbearer.h  print_records.cpp  seek_to_midnight.cpp
ncds/kafkatest/: CMakeLists.txt  avro_decode.cpp  avro_decode.h  config.cpp  config.h  consumer.cpp  consumer.h  curlinit.cpp  curlinit.h  http_request.cpp  http_request.h  kafkatest.cpp  oauthbearer.cpp  print_records.cpp  print_records.h  seek_to_midnight.cpp  seek_to_midnight.h  tools.cpp  tools.h
ncds/nasdaq/: CMakeLists.txt  avro_decode.h  cache_queue.hpp  config.h  consumer.h  data_delegate.h  decoder.h  error.h  location.h  message.h  message_visitor.h  record.h  sequence_manager.h  table_manager.h  thread_pool.hpp  tools.h  types.h
ncds/nasdaq/accessor/: CMakeLists.txt  acc_types.h  avro_decode.h  config.h  consumer.h  error.h  table_manager.h
ncds/nasdaq/dom/: CMakeLists.txt  addorder.h  dom_types.h  dom_visitor.h  message.h  messages.h  values.h
ncds/nasdaq/include/: avro_decode.h  config.h  consumer.h  error.h  types.h
ncds/nasdaq/sources/: avro_decode.cpp  cache_queue.hpp  config.cpp  consumer.cpp  data_delegate.cpp  event.cpp  event.h  http_request.cpp  http_request.h  location.h  message.cpp  oauthbearer.cpp  oauthbearer.h  record.--cpp  record.cpp  record.h  sequence_manager.cpp  table_manager.cpp  thread_pool.hpp  tools.cpp  tools.h
ncds/nasdaq/test/: CMakeLists.txt  test.cpp
ncds/nasdaq/tw/: messages.h  tw_types.h  tw_visitor.h  values.h
ncds/ncdsresources/: ControlMessageSchema.json  ControlMessageSchema1.json  TOTALVIEW.json  TOTALVIEW1.avsc  logging.json  schema.json
ncds/resources/: ControlMessageSchema.avsc  TOTALVIEW.json  logging.json
ncds/schema/: QBBO-A-BSX.json  TOTALVIEW.json
ncds/schematest/: CMakeLists.txt  schematest.cpp
network/network/: CMakeLists.txt  ReadMe.txt  acceptor.h  connector.h  context.h  net_common.h  nettypes.h  network.h  network_vs90.vcproj  session.h
network/network/nettest/: CMakeLists.txt  client.cpp  clparametrs.cpp  clparametrs.h  nettest.cpp  server.cpp
network/network/src/: CMakeLists.txt  acceptor.cpp  acceptor_details.cpp  acceptor_details.h  acceptor_impl.hpp  connector.cpp  context.cpp  context_details.cpp  context_details.h  explicit_Instantiation.cpp  nettype_details.h  session.cpp  session_details.cpp  session_details.h  session_owner.cpp  session_owner_fwd.hpp  socket.hpp  socket_details.h
tuple/: CMakeLists.txt  tuple.cpp
v8library/: .gitignore  CMakeLists.txt  README.md  ddd.txt  flags_detect.py  sep.sh
v8library/prepare/: CMakeLists.txt
v8library/scripts/: get_sources.sh  rename_debug.sh  system_googletest.sh  v8build.sh
v8library/tools/: flags_detect.py
v8library/v8build/: CMakeLists.txt
v8library/v8build/bindings/: CMakeLists.txt
v8library/v8build/bytecode_builtins_list_generator/: CMakeLists.txt
v8library/v8build/d8/: CMakeLists.txt
v8library/v8build/encoding/: CMakeLists.txt
v8test/subproject/: CMakeLists.txt
weak_ptr/weak_ptr/: CMakeLists.txt
weak_ptr_wraper/: CMakeLists.txt  logger.hpp  weak_ptr_wraper.cpp
zxkeyboard/: 1Makefile  CMakeLists.txt  Makefile  gcc-arm-none-eabi.cmake
zxkeyboard/cubemx/: test_f105R8.ioc  test_f105RB.ioc  test_f105RC.ioc  test_f107RB.ioc  test_f107RC.ioc  zxkeyboard_f105R8.ioc  zxkeyboard_f105RB.ioc  zxkeyboard_f105RC.ioc  zxkeyboard_f107RB.ioc  zxkeyboard_f107RC.ioc
zxkeyboard/doc/: ZX_Spectrum_keyboard_help.html  ZX_Spectrum_keyboard_layout.html
zxkeyboard/linker/: STM32F105R8Tx_FLASH.ld  STM32F105RBTx_FLASH.ld  STM32F105RCTx_FLASH.ld  STM32F107RBTx_FLASH.ld
zxkeyboard/project/: custom_usbh_hid_keyboard.c  custom_usbh_hid_keyboard.h  custom_usbh_hid_mouse.h  project.c  project.h  uart_dbg.c  uart_dbg.h  zx_keyboard.c  zx_keyboard.h
zxkeyboard/startup/: startup_stm32f105xc.s  startup_stm32f107xc.s
zxkeys/: CMakeLists.txt  usb_keys.h  zxkeys.c
(+1338 files in other folders)
