# Copyright (C) 2006 Free Software Foundation, Inc.
# This configure.ac script is free software; the Free Software Foundation
# gives unlimited permission to copy, distribute and modify it.

AC_INIT([helloWorldAutotoolsKbuild], [1.0], [my@email.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_CC([])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
 Makefile
 cProgram/Makefile
])
AC_OUTPUT
