cmake_minimum_required(VERSION 3.5)

option(oENABLE_GDB_JIT_INTERFACE "enable gdb git interface" OFF)

set(solution_dir ${CMAKE_CURRENT_SOURCE_DIR})
set(v8source ${solution_dir}/v8)
list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/Modules/")

set(CXX_FLAGS_COMMON "-Wall -Werror -std=gnu++14 -Wno-deprecated-declarations")

message("source dir: " ${CMAKE_SOURCE_DIR})
message("CMAKE_MODULE_PATH: " ${CMAKE_MODULE_PATH})
message("CMAKE_BINARY_DIR: " ${CMAKE_BINARY_DIR})
message("v8source: " ${v8source})
message("CMAKE_SYSTEM_NAME: " ${CMAKE_SYSTEM_NAME})

execute_process(COMMAND uname -m COMMAND tr -d '\n' OUTPUT_VARIABLE ARCHITECTURE)
message(STATUS "Architecture: ${ARCHITECTURE}")

execute_process(COMMAND uname -o COMMAND tr -d '\n' OUTPUT_VARIABLE OS)
message(STATUS "OS: ${OS}")

if(CMAKE_VERSION VERSION_LESS 3.12.0)
  find_package(PythonInterp 3 REQUIRED)
  set(PYTHON_EXECUTABLE ${Python3_EXECUTABLE})
else()
  find_package(Python3 COMPONENTS Interpreter REQUIRED)
  set(PYTHON_EXECUTABLE ${Python3_EXECUTABLE})
endif()

message("PYTHON_EXECUTABLE :" ${PYTHON_EXECUTABLE}) 

#find_package(Protobuf REQUIRED)

#if(PROTOBUF_FOUND)
#    message("protobuf found")
#    message("Protobuf_VERSION :" ${Protobuf_VERSION}) 
#    message("Protobuf_INCLUDE_DIRS :" ${Protobuf_INCLUDE_DIRS})
#    message("Protobuf_LIBRARIES :" ${Protobuf_LIBRARIES})
#    message("Protobuf_PROTOC_LIBRARIES :" ${Protobuf_PROTOC_LIBRARIES})
#    message("Protobuf_LITE_LIBRARIES :" ${Protobuf_LITE_LIBRARIES})
#else()
#    message (FATAL_ERROR "Cannot find Protobuf")
#    message (FATAL_ERROR "sudo apt-get install protobuf-compiler")
#    message (FATAL_ERROR "sudo apt-get install libprotobuf-dev")
#endif()

find_package(ICU 64.0 COMPONENTS i18n uc REQUIRED)
if(ICU_FOUND)
    message("ICU_FOUND: " ${ICU_FOUND})
    message("ICU_VERSION: " ${ICU_VERSION})
    message("ICU_INCLUDE_DIRS: " ${ICU_INCLUDE_DIRS})
    message("ICU_LIBRARIES: " ${ICU_LIBRARIES})
else()
    message (FATAL_ERROR "Cannot find ICU")
    message (FATAL_ERROR "for install read this https://kifarunix.com/how-to-install-php-7-3-3-on-ubuntu-18-04/")
    message (FATAL_ERROR "apt-get install libicu-dev")
endif()

if(oENABLE_GDB_JIT_INTERFACE)
  add_definitions(-DENABLE_GDB_JIT_INTERFACE)
endif(oENABLE_GDB_JIT_INTERFACE)

if(0)
set (GTEST_ROOT /usr/src/googletest/googlemock)
find_package(GTest REQUIRED)
if(GTEST_FOUND)
    message("GTEST_INCLUDE_DIRS: " ${GTEST_INCLUDE_DIRS})
    message("GTEST_LIBRARIES: " ${GTEST_LIBRARIES})
    message("GTEST_MAIN_LIBRARIES: " ${GTEST_MAIN_LIBRARIES})
    message("GTEST_BOTH_LIBRARIES: " ${GTEST_BOTH_LIBRARIES})
else()
    message (FATAL_ERROR "Cannot find GTest")
    message (FATAL_ERROR "sudo apt-get install googletest")
endif()
endif()

#add_subdirectory(prepare)
add_subdirectory(v8build)

