add_subdirectory(torque)
add_subdirectory(gen-regexp-special-case)
add_subdirectory(bytecode_builtins_list_generator)
add_subdirectory(prebuild)
add_subdirectory(encoding)
add_subdirectory(bindings)
add_subdirectory(inspector)
add_subdirectory(mksnapshot)
add_subdirectory(d8)
add_subdirectory(v8)
add_subdirectory(v8_init)
add_subdirectory(v8_libbase)
add_subdirectory(v8_compiler)
add_subdirectory(v8_libplatform)
add_subdirectory(v8_initializers)
add_subdirectory(v8_nosnapshot)
add_subdirectory(v8_external_snapshot)
add_subdirectory(v8_base_without_compiler)
add_subdirectory(v8_libsampler)
add_subdirectory(torque_generated_definitions)
add_subdirectory(torque_generated_initializers)

